alignment fixes

--- a/src/app/components/operator-rounds/revise-schedule/revise-schedule.component.scss
+++ b/src/app/components/operator-rounds/revise-schedule/revise-schedule.component.scss
@@ -29,7 +29,7 @@
 
   .scroll-locations {
     overflow-y: auto;
-    height: 165px;
+    max-height: 165px;
     background: $yellow-bg1;
     border-radius: 5px;
   }
