--- a/src/app/components/operator-rounds/task-level-task-components/task-level-task-components.component.scss
+++ b/src/app/components/operator-rounds/task-level-task-components/task-level-task-components.component.scss
@@ -1,4 +1,97 @@
 @import '../../../../scss/colors.scss';
-@import '../../../forms/components/question/question.component.scss';
-@import '../../../forms/components/section/section.component.scss';
-@import '../../../forms/components/page/page.component.scss';
+
+.task-level-tasks {
+  margin: 0 14px;
+  .page-header {
+    background: $white;
+    border-radius: 10px 10px 0px 0px;
+    margin-top: 12px;
+    padding: 5px 7px 5px 7px;
+    border-top-width: 1px;
+    border-bottom-width: 1px;
+    border-left-width: 1px;
+    border-right-width: 1px;
+    border-style: solid;
+    border-color: $border-color;
+
+    .page-arrow {
+      cursor: pointer;
+      position: relative;
+      top: 3px;
+      left: 5px;
+      margin-right: 7px;
+      color: $black;
+    }
+
+    .page-checkbox {
+      position: relative;
+      top: -6px;
+    }
+
+    .form_page_name_input {
+      font-size: 110%;
+      font-weight: 500;
+      color: $black;
+      position: relative;
+      top: -5px;
+      margin-left: 10px;
+    }
+  }
+
+  .section-content {
+    background: #fafafa;
+    padding-bottom: 10px;
+  }
+
+  .section-margin {
+    margin: 0 12px 12px 25px;
+  }
+
+  .section-header {
+    background: $blue-head;
+    border-radius: 7px;
+    margin-top: 12px;
+    padding: 5px 7px 12px 7px;
+
+    .section-arrow {
+      cursor: pointer;
+      position: relative;
+      top: 7px;
+      left: 10px;
+      margin-right: 12px;
+      color: $white;
+    }
+
+    .section-checkbox {
+      position: relative;
+      top: -2px;
+      ::ng-deep .mat-checkbox-frame {
+        border-color: $white;
+      }
+    }
+
+    .form_section_name_input {
+      font-size: 110%;
+      font-weight: 500;
+      color: $white;
+      margin-left: 10px;
+    }
+  }
+
+  .questions-content {
+    background: $white;
+    padding-bottom: 6px;
+    position: relative;
+    margin-top: 12px;
+  }
+
+  .questions-div {
+    padding: 15px 10px 10px 60px;
+    border-bottom: 1px solid $border-color;
+  }
+
+  .task-question {
+    margin-left: 10px;
+    margin-top: 1px;
+  }
+}
